objects/ReportCard__c.object
<CustomObject>
    <fields>
        <fullName>Recommendation_status__c</fullName>
        <formula>CASE (  Recommendation__c , &quot;Yes&quot;, IMAGE(&quot;/servlet/servlet.ImageServer?id=01530000000RUFZ&amp;oid=00D300000000Z0A&quot;, &quot;Yes&quot;), &quot;No&quot;, IMAGE(&quot;/servlet/servlet.ImageServer?id=01530000000RUFe&amp;oid=00D300000000Z0A&quot;, &quot;No&quot;), &quot;Don&apos;t know&quot;, &quot;Don&apos;t know&quot;, &quot;No response&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recommendation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relevance__c</fullName>
        <inlineHelpText>How relevant was the event to the individual?</inlineHelpText>
        <label>Relevance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relevance_status__c</fullName>
        <formula>CASE ( Relevance__c , &quot;A&quot;, IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;Strong&quot;, 10, 100) &amp; &quot; A&quot;, &quot;B&quot;, IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;Strong&quot;, 10, 80) &amp; &quot; B&quot;, &quot;C&quot;, IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;At risk&quot;, 10, 60) &amp; &quot; C&quot;, &quot;D&quot;, IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;At risk&quot;, 10, 40) &amp; &quot; D&quot;, &quot;F&quot;, IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;Danger&quot;, 10, 20) &amp; &quot; F&quot;, &quot;No response&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relevance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_received__c</fullName>
        <inlineHelpText>When the ReportCard was completed</inlineHelpText>
        <label>Response received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Staff_Knowledge_status__c</fullName>
        <formula>CASE ( Knowledge__c, &quot;A&quot;, IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;Strong&quot;, 10, 100) &amp; &quot; A&quot;, &quot;B&quot;, IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;Strong&quot;, 10, 80) &amp; &quot; B&quot;, &quot;C&quot;, IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;At risk&quot;, 10, 60)  &amp; &quot; C&quot;, &quot;D&quot;, IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;At risk&quot;, 10, 40) &amp; &quot; D&quot;, &quot;F&quot;, IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;Danger&quot;, 10, 20)  &amp; &quot; F&quot;, &quot;No response&quot;)</formula>
        <label>Staff Knowledge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Professionalism_status__c</fullName>
        <formula>CASE (  Professionalism__c , &quot;A&quot;, IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;Strong&quot;, 10, 100) &amp; &quot; A&quot;, &quot;B&quot;, IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;Strong&quot;, 10, 80) &amp; &quot; B&quot;, &quot;C&quot;, IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;At risk&quot;, 10, 60) &amp; &quot; C&quot;, &quot;D&quot;, IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;At risk&quot;, 10, 40) &amp; &quot; D&quot;, &quot;F&quot;, IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;Danger&quot;, 10, 20) &amp; &quot; F&quot;, null)</formula>
        <label>Staff Professionalism</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_score__c</fullName>
        <formula>(CASE( Knowledge__c , &quot;A&quot;, 5, &quot;B&quot;, 4,&quot;C&quot;,3, &quot;D&quot;,2,&quot;F&quot;,1,0) + CASE(  Professionalism__c , &quot;A&quot;, 5, &quot;B&quot;, 4,&quot;C&quot;,3, &quot;D&quot;,2,&quot;F&quot;,1,0) )
/
(CASE( Knowledge__c , &quot;A&quot;, 5, &quot;B&quot;, 5,&quot;C&quot;,5, &quot;D&quot;,5,&quot;F&quot;,5,0) + CASE(  Professionalism__c , &quot;A&quot;, 5, &quot;B&quot;, 5,&quot;C&quot;,5, &quot;D&quot;,5,&quot;F&quot;,5,0) )</formula>
        <label>Staff score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_status__c</fullName>
        <formula>CASE (  Time__c  , &quot;A&quot;, IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;Strong&quot;, 15, 100) &amp; &quot; A&quot;, &quot;B&quot;, IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;Strong&quot;, 15, 80) &amp; &quot; B&quot;, &quot;C&quot;, IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;At risk&quot;, 15, 60) &amp; &quot; C&quot;, &quot;D&quot;, IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;At risk&quot;, 15, 40) &amp; &quot; D&quot;, &quot;F&quot;, IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;Danger&quot;, 15, 20) &amp; &quot; F&quot;, &quot;No response&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_to_resolve__c</fullName>
        <label>Time to resolve</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_to_resolve_status__c</fullName>
        <formula>CASE (  Time_to_resolve__c  , &quot;A&quot;, IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;Strong&quot;, 10, 100) &amp; &quot; A&quot;, &quot;B&quot;, IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;Strong&quot;, 10, 80) &amp; &quot; B&quot;, &quot;C&quot;, IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;At risk&quot;, 10, 60) &amp; &quot; C&quot;, &quot;D&quot;, IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;At risk&quot;, 10, 40) &amp; &quot; D&quot;, &quot;F&quot;, IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;Danger&quot;, 10, 20) &amp; &quot; F&quot;, &quot;No response&quot;)</formula>
        <label>Time to resolve</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_to_respond__c</fullName>
        <label>Time to respond</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_to_respond_status__c</fullName>
        <formula>CASE (  Time_to_respond__c , &quot;A&quot;, IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;Strong&quot;, 10, 100) &amp; &quot; A&quot;, &quot;B&quot;, IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;Strong&quot;, 10, 80) &amp; &quot; B&quot;, &quot;C&quot;, IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;At risk&quot;, 10, 60) &amp; &quot; C&quot;, &quot;D&quot;, IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;At risk&quot;, 10, 40) &amp; &quot; D&quot;, &quot;F&quot;, IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;Danger&quot;, 10, 20) &amp; &quot; F&quot;, &quot;No response&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time to respond</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Took_Appropriate_amount_of_time__c</fullName>
        <label>Took Appropriate amount of time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly Agree</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Somewhat Agree</fullName>
                </value>
                <value>
                    <fullName>Somewhat Disagree</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Strongly Disagree</fullName>
                </value>
                <value>
                    <fullName>Does Not Apply</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_Courteous__c</fullName>
        <label>Was Courteous</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly Agree</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Somewhat Agree</fullName>
                </value>
                <value>
                    <fullName>Somewhat Disagree</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Strongly Disagree</fullName>
                </value>
                <value>
                    <fullName>Does Not Apply</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ReportCard™</label>
    <nameField>
        <displayFormat>RC{00000}</displayFormat>
        <label>Response</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ReportCards</pluralLabel>
    <recordTypes>
        <fullName>Closed_case</fullName>
        <active>true</active>
        <description>Measure support team effectiveness by capturing feedback immediately after a case is closed</description>
        <label>Closed case</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer_Insight</fullName>
        <active>true</active>
        <description>Feedback shortly after someone becomes a customer (time will depend on your own customer journey)</description>
        <label>Customer Insight</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer_satisfaction</fullName>
        <active>true</active>
        <description>Feedback mid way through a purchase cycle or shortly before contract renewal. Intended to show signs of potential defection.</description>
        <label>Customer satisfaction</label>
    </recordTypes>
    <recordTypes>
        <fullName>Event</fullName>
        <active>true</active>
        <description>Feedback from events such as exhibitions or webinars</description>
        <label>Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>PS_Consulting</fullName>
        <active>true</active>
        <description>Measure the effectiveness of implementation services</description>
        <label>PS/Consulting</label>
    </recordTypes>
    <recordTypes>
        <fullName>P_D</fullName>
        <active>true</active>
        <description>Used to store results to a popular two question survey</description>
        <label>Advocacy (P-D)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner_satisfaction</fullName>
        <active>true</active>
        <description>Measure effectiveness of your partner program</description>
        <label>Partner satisfaction</label>
    </recordTypes>
    <recordTypes>
        <fullName>Training</fullName>
        <active>true</active>
        <description>How effective is your training. Best captured immediately once a course (class or virtual) is completed.</description>
        <label>Training</label>
    </recordTypes>
    <recordTypes>
        <fullName>Win_Loss</fullName>
        <active>true</active>
        <description>Understand why you won (or lost) a job to improve sales effectiveness</description>
        <label>Win/Loss</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>